# workspacex

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
demo/: Makefile  README.md  SPIKE-NOTES.md  deadair.sh  gen-repos.sh  post.sh  render.sh  sandbox-bootstrap.sh  speedramp.sh  test-bootstrap.sh  test-gen-repos.sh  test-post.sh  test-speedramp.sh
demo/captions/: 00-spike.txt  01-hero.txt  02-parallel.txt
demo/tapes/: 01-hero-multi-agent.tape  02-parallel-worktrees.tape  mini.tape  spike-live.tape  spike.tape
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/manual-tests/: attention-detection.md  dashboard-detail-bar.md  detail-bar-config.md  detail-bar-modules.md  named-remotes.md  workspace-layout-persistence.md
docs/superpowers/plans/: 2026-05-13-wsx-tui.md  2026-05-14-dynamic-branch-lifecycle-indicator.md  2026-05-14-project-manager-pane.md  2026-05-14-setup-scripts-in-db.md  2026-05-14-workspace-updates-panel.md  2026-05-15-dashboard-redesign.md  2026-05-15-process-tracking.md  2026-05-15-remote-access.md  2026-05-15-repo-settings-editor.md  2026-05-15-scrollback.md  2026-05-15-view-diff.md  2026-05-16-mcp-server-mirroring.md  2026-05-16-remote-control-by-default.md  2026-05-17-pinned-commands.md  2026-05-18-named-remotes.md  2026-05-18-question-vs-complete-attention.md  2026-05-18-related-repos.md  2026-06-03-cli-help.md  (+55 more)
sandbox/: README.md  agent-env.sh  bootstrap.sh  env.sh  render.sh  test-agent-env.sh  test-bootstrap.sh  test-env.sh
site/: INSTALL.md  index.html  robots.txt  sitemap.xml  tui.css  workspacex-site.css  workspacex-site.js
skills/agent-pr/: SKILL.md
skills/agent-review/: SKILL.md
skills/wsx/: SKILL.md
src/: app.rs  cli.rs  config.rs  detail_bar_config.rs  doctrine.rs  error.rs  events.rs  external.rs  forge.rs  git.rs  hermes_events.rs  lib.rs  main.rs  mcp.rs  names.rs  pi_events.rs  pinned.rs  pm.rs  proc.rs  related.rs  remote.rs  remote_control.rs  remotes.rs  repo.rs  setup.rs  skill.rs  store.rs  test_support.rs  time.rs  workspace.rs
src/activity/: chronology.rs  codex_events.rs  events.rs  hermes_events.rs  mod.rs  pi_events.rs  proc.rs
src/agent/: codex_commands.rs  doctrine.rs  handoff.rs  mcp.rs  mod.rs  pm.rs  related.rs  remote_control.rs  skill.rs
src/app/: activity.rs  background.rs  bell.rs  input.rs  input_tests.rs  messaging.rs  render.rs  resize_sync.rs
src/chronology/: mod.rs  render.rs
src/commands/: external.rs  mod.rs  remotes.rs  shared.rs  shared_hosts.rs
src/config/: chronology.rs  chronology_source.rs  detail_bar_config.rs  mod.rs  usage_window.rs
src/data/: activity.rs  agents.rs  layout.rs  messages.rs  mod.rs  progress.rs  recap.rs  repo.rs  schema.rs  settings.rs  setup.rs  setup_log.rs  status.rs  store.rs  workspace.rs
src/detail_modules/: markdown.rs  mod.rs  processes.rs  recent_chat.rs  recent_files.rs  session_summary.rs
src/git/: forge.rs  mod.rs
src/pty/: agent_kind.rs  command.rs  mod.rs  render.rs  session.rs  session_detect.rs  tmux.rs  workspace_prep.rs
src/ui/: attached.rs  chronology_bar.rs  chronology_nav.rs  dashboard.rs  footer.rs  mod.rs  modal.rs  pm_pane.rs  split.rs  syntax.rs  text.rs  theme.rs  updates_bar.rs
test/: README.md  harness.sh  smoke.sh
test/shots/: dashboard.tape
tests/: branch_drift.rs  smoke.rs
(+150 files in other folders)
