[package]
name = "wsx"
version = "0.1.0"
edition = "2024"

[lib]
name = "wsx"
path = "src/lib.rs"

[[bin]]
name = "wsx"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
portable-pty = "0.9"
vt100 = { version = "0.15.2", package = "fnug-vt100" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
rand = "0.8"
futures = "0.3"
shlex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
