[package]
name = "wsx"
version = "0.1.0"
edition = "2024"
# Minimum supported Rust version. Edition 2024 was stabilized in 1.85, so that
# is the hard floor; declaring it makes cargo fail with a clear message on
# older toolchains instead of a cryptic edition error.
rust-version = "1.85"
authors = ["Eben Goodman"]
description = "Terminal UI for managing Claude Code sessions in git worktrees."
license = "MIT"
readme = "README.md"
repository = "https://github.com/bakedbean/workspacex"
homepage = "https://github.com/bakedbean/workspacex"
keywords = ["tui", "git", "worktree", "claude", "agent"]
categories = ["command-line-utilities", "development-tools"]
# Not ready for crates.io yet. This makes an accidental `cargo publish` fail
# fast instead of pushing a release. Remove (or set to a registry) when you
# decide to publish; note the crate name `wsx` must be available there.
publish = false

[lib]
name = "wsx"
path = "src/lib.rs"

[[bin]]
name = "wsx"
path = "src/main.rs"

[dependencies]
sessionx = { git = "https://github.com/bakedbean/sessionx", rev = "3f83a3abbfe9e5a00521f9d91c7c08c815a9d151" }
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
portable-pty = "0.9"
vt100 = { version = "0.15.2", package = "fnug-vt100" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
rand = "0.10"
futures = "0.3"
shlex = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
